starting to mess with y3

--- a/DESY3_PSF_A.ipynb
+++ b/DESY3_PSF_A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a6e8058a",
    "metadata": {},
    "outputs": [],
@@ -21,56 +21,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0d2f0a50-9d98-4bf4-89aa-4d9213c3e3f1",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "a634b70d",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File read in: XMM_stars.fits\n",
-      "File read in: HECTOMAP_stars.fits\n",
-      "File read in: GAMA09H_stars.fits\n",
-      "File read in: VVDS_stars.fits\n",
-      "File read in: WIDE12H_stars.fits\n",
-      "File read in: GAMA15H_stars.fits\n"
+      "ColDefs(\n",
+      "    name = 'ra'; format = 'D'\n",
+      "    name = 'dec'; format = 'D'\n",
+      "    name = 'x'; format = 'D'\n",
+      "    name = 'y'; format = 'D'\n",
+      "    name = 'obs_e1'; format = 'D'\n",
+      "    name = 'obs_e2'; format = 'D'\n",
+      "    name = 'obs_T'; format = 'D'\n",
+      "    name = 'piff_e1'; format = 'D'\n",
+      "    name = 'piff_e2'; format = 'D'\n",
+      "    name = 'piff_T'; format = 'D'\n",
+      "    name = 'mag'; format = 'D'\n",
+      "    name = 'fov_x'; format = 'D'\n",
+      "    name = 'fov_y'; format = 'D'\n",
+      "    name = 'exp'; format = 'J'\n",
+      "    name = 'ccd'; format = 'I'\n",
+      "    name = 'band'; format = '1A'\n",
+      "    name = 'tiling'; format = 'I'\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "def read_hsc_fits(file_path):\n",
+    "# Print columns of hdul[1] file\n",
+    "file_path = \"../data/psf_y3a1-v29.fits\"\n",
+    "hdul = fits.open(file_path)\n",
+    "print(hdul[1].columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0d2f0a50-9d98-4bf4-89aa-4d9213c3e3f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def read_des_fits(file_path):\n",
     "    # Read in the fits file and close it\n",
     "    hdul = fits.open(file_path)\n",
-    "    data = hdul[1].data\n",
-    "    hdul.close()\n",
+    "    data = hdul[1].data[['ra', 'dec', 'mag', 'band']]\n",
+    "    data = np.random.choice(data[data['band'] == 'z'], size = 10000)\n",
     "\n",
     "    # Print the column names and length of the data\n",
     "    # print(data.columns.names)\n",
     "    # print(len(data))\n",
     "\n",
     "    # Get object IDs, parent IDs, ira, idec and imagnitudes and add to pandas dataframe\n",
-    "    hsc_y1 = pd.DataFrame({'object_id': data['object_id'], 'parent_id': data['parent_id'], 'ra': data['ira'], 'dec': data['idec'], 'imag': data['imag_psf']})\n",
+    "    des = pd.DataFrame({'ra': data['ra'], 'dec': data['dec'], 'mag': data['mag'], 'band': data['band']})\n",
+    "    \n",
+    "    hdul.close()\n",
     "\n",
     "    # Combine ra and dec into a sky coord array\n",
-    "    hsc_y1['coord'] = SkyCoord(ra=hsc_y1['ra'], dec=hsc_y1['dec'], unit = 'deg')\n",
-    "    return hsc_y1\n",
+    "    des['coord'] = SkyCoord(ra=des['ra'], dec=des['dec'], unit = 'deg')\n",
+    "    return des\n",
     "\n",
-    "# Cycle through fits files in data directory and read in the data, and stack it into a single dataframe\n",
-    "hsc_full = pd.DataFrame()\n",
-    "for i in os.listdir('../data'):\n",
-    "    if 'stars.fits' in i:\n",
-    "        file_path = '../data/' + i\n",
-    "        hsc_y1 = read_hsc_fits(file_path)\n",
-    "        print('File read in: ' + i)\n",
-    "        hsc_full = pd.concat([hsc_full, hsc_y1], ignore_index=True)"
+    "# Read in the DES data\n",
+    "file_path = \"../data/psf_y3a1-v29.fits\"\n",
+    "des = read_des_fits(file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1721456e",
    "metadata": {},
    "outputs": [
@@ -107,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ee8a7842",
    "metadata": {},
    "outputs": [],
@@ -132,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6c3d5be0",
    "metadata": {},
    "outputs": [
@@ -177,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4d5df2ff",
    "metadata": {},
    "outputs": [],
@@ -197,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8d3617c1-18e6-478b-95fc-47d7d24df31e",
    "metadata": {
     "tags": []
@@ -254,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "064cadb1",
    "metadata": {},
    "outputs": [],
@@ -303,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "819e527e-8dec-4dda-9325-2ea240313720",
    "metadata": {},
    "outputs": [
@@ -549,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f07eccdb-5ca9-4205-a44f-3eab0bca3d24",
    "metadata": {
     "tags": []
@@ -587,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ec10be4f",
    "metadata": {},
    "outputs": [
@@ -640,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a7e0be6d",
    "metadata": {},
    "outputs": [
@@ -680,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5642c667",
    "metadata": {},
    "outputs": [],
@@ -691,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c22a94a1",
    "metadata": {},
    "outputs": [],
@@ -721,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bca3931a",
    "metadata": {},
    "outputs": [
@@ -764,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1b932800",
    "metadata": {},
    "outputs": [
@@ -785,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "da124604",
    "metadata": {},
    "outputs": [
@@ -806,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f61463b3",
    "metadata": {},
    "outputs": [
@@ -827,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
