--- a/DESY3_PSF_A.ipynb
+++ b/DESY3_PSF_A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a6e8058a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a634b70d",
    "metadata": {},
    "outputs": [
@@ -60,25 +60,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
+   "id": "5e220896",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "a must be 1-dimensional",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#X33sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m hdul \u001b[39m=\u001b[39m fits\u001b[39m.\u001b[39mopen(file_path)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#X33sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m cols \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mra\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdec\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mband\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#X33sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m zidx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice(np\u001b[39m.\u001b[39;49mwhere(hdul[\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39;49mdata[\u001b[39m'\u001b[39;49m\u001b[39mband\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mz\u001b[39;49m\u001b[39m'\u001b[39;49m), size \u001b[39m=\u001b[39;49m \u001b[39m100\u001b[39;49m)\n",
+      "File \u001b[0;32mnumpy/random/mtrand.pyx:946\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional"
+     ]
+    }
+   ],
+   "source": [
+    "hdul = fits.open(file_path)\n",
+    "cols = ['ra', 'dec', 'mag', 'band']\n",
+    "zidx = np.random.choice(np.where(hdul[1].data['band'] == 'z'), size = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f680fb3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zidx  = np.random.choice(np.where(hdul[1].data['band'] == 'z')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "0d2f0a50-9d98-4bf4-89aa-4d9213c3e3f1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'astropy.io.fits.fitsrec.FITS_rec'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "no field of name ra",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Read in the DES data\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m file_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/psf_y3a1-v29.fits\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m des \u001b[39m=\u001b[39m read_des_fits(file_path)\n",
+      "\u001b[1;32m/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(hdul[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mdata))\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# data = np.random.choice(data[data['band'] == 'z'], size = 10000)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Print the column names and length of the data\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Get object IDs, parent IDs, ira, idec and imagnitudes and add to pandas dataframe\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m des \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame({\u001b[39m'\u001b[39m\u001b[39mra\u001b[39m\u001b[39m'\u001b[39m: data[\u001b[39m'\u001b[39;49m\u001b[39mra\u001b[39;49m\u001b[39m'\u001b[39;49m], \u001b[39m'\u001b[39m\u001b[39mdec\u001b[39m\u001b[39m'\u001b[39m: data[\u001b[39m'\u001b[39m\u001b[39mdec\u001b[39m\u001b[39m'\u001b[39m], \u001b[39m'\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m'\u001b[39m: data[\u001b[39m'\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m'\u001b[39m], \u001b[39m'\u001b[39m\u001b[39mband\u001b[39m\u001b[39m'\u001b[39m: data[\u001b[39m'\u001b[39m\u001b[39mband\u001b[39m\u001b[39m'\u001b[39m]})\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m hdul\u001b[39m.\u001b[39mclose()\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bmidway3.rcc.uchicago.edu/home/shrihan/weaklens/weaklens_code/DESY3_PSF_A.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# Combine ra and dec into a sky coord array\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: no field of name ra"
+     ]
+    }
+   ],
    "source": [
     "def read_des_fits(file_path):\n",
     "    # Read in the fits file and close it\n",
     "    hdul = fits.open(file_path)\n",
-    "    data = hdul[1].data[['ra', 'dec', 'mag', 'band']]\n",
-    "    data = np.random.choice(data[data['band'] == 'z'], size = 10000)\n",
+    "    \n",
+    "    # hdul[1].data is a numpy recarray. Get the ra, dec, mag and band columns   \n",
+    "    cols = ['ra', 'dec', 'mag', 'band']\n",
+    "    zidx = np.random.choose(np.where(hdul[1].data['band'] == 'z'))\n",
+    "    data = {col: hdul[1].data[col][zidx] for col in cols}\n",
+    "\n",
+    "    # data = np.random.choice(data[data['band'] == 'z'], size = 10000)\n",
     "\n",
     "    # Print the column names and length of the data\n",
     "    # print(data.columns.names)\n",
     "    # print(len(data))\n",
     "\n",
     "    # Get object IDs, parent IDs, ira, idec and imagnitudes and add to pandas dataframe\n",
-    "    des = pd.DataFrame({'ra': data['ra'], 'dec': data['dec'], 'mag': data['mag'], 'band': data['band']})\n",
+    "    des = pd.DataFrame(data)\n",
     "    \n",
     "    hdul.close()\n",
     "\n",
