--- a/DESY3_PSF_A.ipynb
+++ b/DESY3_PSF_A.ipynb
@@ -515,6 +515,75 @@
       "    order by source_id\n",
       "    \n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shrihan/.conda/envs/weaklens2/lib/python3.10/site-packages/pandas/core/arraylike.py:396: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matching cluster 9 to Gaia...\n",
+      "\n",
+      "    select top 1000000 ra, dec, phot_g_mean_mag, in_qso_candidates, in_galaxy_candidates, non_single_star, astrometric_excess_noise\n",
+      "    FROM gaiadr3.gaia_source\n",
+      "    WHERE 1 = CONTAINS(\n",
+      "    POINT(353.11404256865404, -62.88510055684178),\n",
+      "    CIRCLE(ra, dec, 3.9054586073485846))\n",
+      "    order by source_id\n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shrihan/.conda/envs/weaklens2/lib/python3.10/site-packages/pandas/core/arraylike.py:396: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matching cluster 10 to Gaia...\n",
+      "\n",
+      "    select top 1000000 ra, dec, phot_g_mean_mag, in_qso_candidates, in_galaxy_candidates, non_single_star, astrometric_excess_noise\n",
+      "    FROM gaiadr3.gaia_source\n",
+      "    WHERE 1 = CONTAINS(\n",
+      "    POINT(307.6190310173829, -55.058681491820835),\n",
+      "    CIRCLE(ra, dec, 2.3881141816277642))\n",
+      "    order by source_id\n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shrihan/.conda/envs/weaklens2/lib/python3.10/site-packages/pandas/core/arraylike.py:396: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matching cluster 11 to Gaia...\n",
+      "\n",
+      "    select top 1000000 ra, dec, phot_g_mean_mag, in_qso_candidates, in_galaxy_candidates, non_single_star, astrometric_excess_noise\n",
+      "    FROM gaiadr3.gaia_source\n",
+      "    WHERE 1 = CONTAINS(\n",
+      "    POINT(33.264957007638166, -29.841345033041126),\n",
+      "    CIRCLE(ra, dec, 4.823969962327039))\n",
+      "    order by source_id\n",
+      "    \n"
+     ]
     }
    ],
    "source": [
