--- a/DESY3/DESY3_PSF_A.ipynb
+++ b/DESY3/DESY3_PSF_A.ipynb
@@ -4947,7 +4947,7 @@
     "for i in range(1, number_of_clusters): # NOTE: STARTING FROM 1.\n",
     "    print(\"Matching cluster \" + str(i) + \" to Gaia...\")\n",
     "    comb_clusteri = match_cluster_to_gaia(cluster_num_array, ra_dec, cluster_info, i)\n",
-    "    comb_clusteri.to_csv(f\"../int_data/DESY3_Cluster_{i}.csv\")\n",
+    "    comb_clusteri.to_csv(f\"../../int_data/DESY3_Cluster_{i}.csv\")\n",
     "    master_comb_df = pd.concat([master_comb_df, comb_clusteri])"
    ]
   },
@@ -5084,18 +5084,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "5642c667",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataframe to a csv file\n",
-    "master_comb_df.to_csv(\"DESY3_Z_MATCHED.csv\")"
+    "master_comb_df.to_csv(\"../../psf_data/final_data/zdata/DESY3_Z_MATCHED.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5113,13 +5113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "c22a94a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load all dataframes in folder and concatenate them\n",
-    "fold = \"../int_data/\"\n",
+    "fold = \"../../int_data/zdata/\"\n",
     "files = os.listdir(fold)\n",
     "df_list = []\n",
     "for file in files:\n",
@@ -5129,17 +5129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "bca3931a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f49619c50c0>"
+       "<matplotlib.legend.Legend at 0x7fd24fd6ba00>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
