first pass predebugging python complete

--- a/DESY3/DESY3_PSF_I.ipynb
+++ b/DESY3/DESY3_PSF_I.ipynb
@@ -129,24 +129,28 @@
     "CLUSTER_SUBSAMPLE_SIZE = 10000\n",
     "NUMBER_OF_CLUSTERS = 200\n",
     "\n",
-    "# Get 2D array of ra and dec from dataframe\n",
-    "ra_dec = np.array([des['ra'], des['dec']]).T\n",
-    "ridx = np.random.choice(np.arange(ra_dec.shape[0]), size = CLUSTER_SUBSAMPLE_SIZE, replace = False)\n",
-    "ra_dec_sample = ra_dec[ridx]\n",
+    "def perform_clustering(des, n_clusters, subsample_size)\n",
     "\n",
-    "# Perform clustering on subsample\n",
-    "cents = kmeans(ra_dec_sample, NUMBER_OF_CLUSTERS)\n",
-    "print(\"Centroids found.\")\n",
-    "centroids = cents[0]\n",
-    "cluster_num_array = vq(ra_dec, centroids)\n",
-    "print(\"Stars clustered.\")\n",
+    "    # Get 2D array of ra and dec from dataframe\n",
+    "    ra_dec = np.array([des['ra'], des['dec']]).T\n",
+    "    ridx = np.random.choice(np.arange(ra_dec.shape[0]), size = subsample_size, replace = False)\n",
+    "    ra_dec_sample = ra_dec[ridx]\n",
     "\n",
-    "# Generate cluster info df\n",
-    "max_dist_pts = {i:[np.array([k for k in cluster_num_array[1][cluster_num_array[0] == i]]).max()] for i in range(NUMBER_OF_CLUSTERS)}\n",
-    "cluster_info = pd.DataFrame(max_dist_pts).T\n",
-    "cluster_info.columns = [\"max_dist\"]\n",
-    "cluster_info[\"clusterno\"] = cluster_info.index\n",
-    "cluster_info[\"centroids\"] = list(centroids)"
+    "    # Perform clustering on subsample\n",
+    "    cents = kmeans(ra_dec_sample, n_clusters)\n",
+    "    print(\"Centroids found.\")\n",
+    "    centroids = cents[0]\n",
+    "    cluster_num_array = vq(ra_dec, centroids)\n",
+    "    print(\"Stars clustered.\")\n",
+    "\n",
+    "    # Generate cluster info df\n",
+    "    max_dist_pts = {i:[np.array([k for k in cluster_num_array[1][cluster_num_array[0] == i]]).max()] for i in range(n_clusters)}\n",
+    "    cluster_info = pd.DataFrame(max_dist_pts).T\n",
+    "    cluster_info.columns = [\"max_dist\"]\n",
+    "    cluster_info[\"clusterno\"] = cluster_info.index\n",
+    "    cluster_info[\"centroids\"] = list(centroids)\n",
+    "    \n",
+    "    return ra_dec, centroids, cluster_info, cluster_num_array"
    ]
   },
   {
@@ -393,7 +397,7 @@
     "    plt.ylabel(\"Counts\")\n",
     "    plt.xlabel(\"Separation from Best Match (arcsec)\")\n",
     "    plt.title(\"Matched Stars: Separation in Arcsec\")\n",
-    "    return"
+    "    retu"
    ]
   },
   {
