fixed query_des for large radii

--- a/src/query_test.ipynb
+++ b/src/query_test.ipynb
@@ -196,6 +196,186 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ra</th>\n",
+       "      <th>dec</th>\n",
+       "      <th>in_qso_candidates</th>\n",
+       "      <th>in_galaxy_candidates</th>\n",
+       "      <th>non_single_star</th>\n",
+       "      <th>is_star</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.385375</td>\n",
+       "      <td>-63.935587</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.379013</td>\n",
+       "      <td>-63.933067</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40.542765</td>\n",
+       "      <td>-63.930190</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.537682</td>\n",
+       "      <td>-63.934508</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.654792</td>\n",
+       "      <td>-63.941125</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234234</th>\n",
+       "      <td>40.126497</td>\n",
+       "      <td>-55.847247</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234235</th>\n",
+       "      <td>40.110284</td>\n",
+       "      <td>-55.842860</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234236</th>\n",
+       "      <td>41.110041</td>\n",
+       "      <td>-55.843370</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234237</th>\n",
+       "      <td>41.096716</td>\n",
+       "      <td>-55.852361</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234238</th>\n",
+       "      <td>41.080534</td>\n",
+       "      <td>-55.840918</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>234239 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ra        dec  in_qso_candidates  in_galaxy_candidates  \\\n",
+       "0       40.385375 -63.935587              False                 False   \n",
+       "1       40.379013 -63.933067              False                 False   \n",
+       "2       40.542765 -63.930190              False                 False   \n",
+       "3       40.537682 -63.934508              False                 False   \n",
+       "4       40.654792 -63.941125              False                 False   \n",
+       "...           ...        ...                ...                   ...   \n",
+       "234234  40.126497 -55.847247              False                 False   \n",
+       "234235  40.110284 -55.842860               True                 False   \n",
+       "234236  41.110041 -55.843370              False                 False   \n",
+       "234237  41.096716 -55.852361              False                 False   \n",
+       "234238  41.080534 -55.840918              False                 False   \n",
+       "\n",
+       "        non_single_star  is_star  \n",
+       "0                     0     True  \n",
+       "1                     0     True  \n",
+       "2                     0     True  \n",
+       "3                     0     True  \n",
+       "4                     0     True  \n",
+       "...                 ...      ...  \n",
+       "234234                0     True  \n",
+       "234235                0     True  \n",
+       "234236                0     True  \n",
+       "234237                0     True  \n",
+       "234238                0     True  \n",
+       "\n",
+       "[234239 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "INT_DATA_PATH = \"../../int_data/\"\n",
+    "pd.read_feather(INT_DATA_PATH + \"gaia/\" + \"gaia\" + str(0) + \".feather\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
