calculated star galaxy separator

--- a/test_notes/plotHSCY3.ipynb
+++ b/test_notes/plotHSCY3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "Text(0.5, 1.0, 'HSCY3 and Gaia Match Completeness (i-band)')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -53,6 +53,158 @@
     "master_comb_df = pd.read_csv(RESULTS_FILEPATH_BAND + \"HSCY3_MATCH_BANDi.csv\")\n",
     "match.plot_match_completeness(master_comb_df, fold = RESULTS_FILEPATH_BAND, BAND = BAND, bounds = [17, 23])\n",
     "plt.title(\"HSCY3 and Gaia Match Completeness (i-band)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>matched</th>\n",
+       "      <th>sep2d</th>\n",
+       "      <th>mag0</th>\n",
+       "      <th>is_star</th>\n",
+       "      <th>in_qso_candidates</th>\n",
+       "      <th>in_galaxy_candidates</th>\n",
+       "      <th>non_single_star</th>\n",
+       "      <th>gaia_ra</th>\n",
+       "      <th>gaia_dec</th>\n",
+       "      <th>cluster_ra</th>\n",
+       "      <th>cluster_dec</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.571226</td>\n",
+       "      <td>21.781275</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>131.172200</td>\n",
+       "      <td>0.555416</td>\n",
+       "      <td>131.174564</td>\n",
+       "      <td>0.557157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.756354</td>\n",
+       "      <td>21.729973</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>132.293317</td>\n",
+       "      <td>0.186039</td>\n",
+       "      <td>132.293613</td>\n",
+       "      <td>0.176945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23.421693</td>\n",
+       "      <td>20.489487</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>133.180304</td>\n",
+       "      <td>-0.293008</td>\n",
+       "      <td>133.174452</td>\n",
+       "      <td>-0.290165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.014643</td>\n",
+       "      <td>19.310669</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130.978242</td>\n",
+       "      <td>0.032397</td>\n",
+       "      <td>130.978245</td>\n",
+       "      <td>0.032399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.198398</td>\n",
+       "      <td>20.482758</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130.011615</td>\n",
+       "      <td>0.368639</td>\n",
+       "      <td>130.015208</td>\n",
+       "      <td>0.372195</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  matched      sep2d       mag0  is_star  in_qso_candidates  \\\n",
+       "0           0      0.0  10.571226  21.781275     True              False   \n",
+       "1           1      0.0  32.756354  21.729973     True              False   \n",
+       "2           2      0.0  23.421693  20.489487     True              False   \n",
+       "3           3      1.0   0.014643  19.310669     True              False   \n",
+       "4           4      0.0  18.198398  20.482758     True              False   \n",
+       "\n",
+       "   in_galaxy_candidates  non_single_star     gaia_ra  gaia_dec  cluster_ra  \\\n",
+       "0                 False                0  131.172200  0.555416  131.174564   \n",
+       "1                 False                0  132.293317  0.186039  132.293613   \n",
+       "2                 False                0  133.180304 -0.293008  133.174452   \n",
+       "3                 False                0  130.978242  0.032397  130.978245   \n",
+       "4                 False                0  130.011615  0.368639  130.015208   \n",
+       "\n",
+       "   cluster_dec  \n",
+       "0     0.557157  \n",
+       "1     0.176945  \n",
+       "2    -0.290165  \n",
+       "3     0.032399  \n",
+       "4     0.372195  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "master_comb_df.head()"
    ]
   },
   {
